--- a/index.html
+++ b/index.html
@@ -196,35 +196,35 @@
   </div>
 
   <div class="buttons" id="bot-buttons" style="max-width: 440px; margin-top: 15px;">
-    <button type="button" class="button" data-msg="Bot Plugins Activated!">
+    <button type="button" class="button" data-msg="Bot Plugins sell!">
       Bot Plugins
       <span class="subline">𝐂𝐘𝐁𝐄𝐑-𝐅𝐑𝐄𝐄𝐃𝐎𝐌</span>
     </button>
-    <button type="button" class="button" data-msg="Web HTML & CSS Module Selected!">
+    <button type="button" class="button" data-msg="Web HTML & CSS sell!">
       Web HTML & CSS
       <span class="subline">𝐂𝐘𝐁𝐄𝐑-𝐅𝐑𝐄𝐄𝐃𝐎𝐌</span>
     </button>
-    <button type="button" class="button" data-msg="Pair Web Module Ready!">
+    <button type="button" class="button" data-msg="Pair Web sell!">
       Pair Web
       <span class="subline">𝐂𝐘𝐁𝐄𝐑-𝐅𝐑𝐄𝐄𝐃𝐎𝐌</span>
     </button>
-    <button type="button" class="button" data-msg="WA Bot Buttons Enabled!">
+    <button type="button" class="button" data-msg="WA Bot Buttons sell!">
       WA Bot Buttons Bese
       <span class="subline">𝐂𝐘𝐁𝐄𝐑-𝐅𝐑𝐄𝐄𝐃𝐎𝐌</span>
     </button>
-    <button type="button" class="button" data-msg="WA Bot Non-button Mode On!">
+    <button type="button" class="button" data-msg="WA Bot Non-button sell!">
       WA Bot Nonbutton Bese
       <span class="subline">𝐂𝐘𝐁𝐄𝐑-𝐅𝐑𝐄𝐄𝐃𝐎𝐌</span>
     </button>
-    <button type="button" class="button" data-msg="OTP Lock Method Activated!">
+    <button type="button" class="button" data-msg="OTP Lock Method sell!">
       OTP Lock Method
       <span class="subline">𝐂𝐘𝐁𝐄𝐑-𝐅𝐑𝐄𝐄𝐃𝐎𝐌</span>
     </button>
-    <button type="button" class="button" data-msg="WA Banned Method Engaged!">
+    <button type="button" class="button" data-msg="WA Banned Method sell!">
       WA Banned Method
       <span class="subline">𝐂𝐘𝐁𝐄𝐑-𝐅𝐑𝐄𝐄𝐃𝐎𝐌</span>
     </button>
-    <button type="button" class="button" data-msg="Own Bot Selected!">
+    <button type="button" class="button" data-msg="Own Bot sell!">
       Own Bot
       <span class="subline">𝐂𝐘𝐁𝐄𝐑-𝐅𝐑𝐄𝐄𝐃𝐎𝐌</span>
     </button>
