--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Bot Buttons with Background and Border Animation</title>
+<title>SELL-STORE-CYBER-FREEDOM</title>
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
 
